5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4357/executions/1793_1597.log
== SUBMITION (2019-05-30 18:07:22) 
-- CODE:
from math import*
compra=array(eval(input("digite o numero:")))
desconto=5
i=0
a=0
while(i<size(compra)):
	if(compra>80):
		a=a+compra-desconto
	i=i+1
print(round(compra))

-- EXECUTION TIME:
0.167779
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1597/main.py", line 2, in <module>
    compra=array(eval(input()))
NameError: name 'array' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:07:25) 
-- CODE:
from math import*
compra=array(eval(input("digite o numero:")))
desconto=5
i=0
a=0
while(i<size(compra)):
	if(compra>80):
		a=a+compra-desconto
	i=i+1
print(round(compra))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    compra=array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:08:04) 
-- CODE:
from math import*
compra=float(input("digite o numero:"))
desconto=5
i=0
a=0
while(i<size(compra)):
	if(compra>80):
		a=a+compra-desconto
	i=i+1
print(round(compra))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    compra=float(input())
ValueError: could not convert string to float: '[11.32,40.2,32,0]'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:08:39) 
-- CODE:
from math import*
compra=float(input("digite o numero:"))
desconto=5
i=0
a=0
while(i<size(compra[i])):
	if(compra[i]>80):
		a=a+compra-desconto
	i=i+1
print(round(compra))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    compra=float(input())
ValueError: could not convert string to float: '[11.32,40.2,32,0]'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:11:14) 
-- CODE:
from math import*
compra=float(input("digite o numero:"))
desconto=5
i=0
soma=0
while(i<size(compra[i])):
	if(compra[i]>80):
		soma=soma+compra-desconto
	i=i+1
print(round(compra))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    compra=float(input())
ValueError: could not convert string to float: '[11.32,40.2,32,0]'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:11:29) 
-- CODE:
from math import*
compra=float(input("digite o numero:"))
desconto=5
i=0
soma=0
while(i<size(compra[i])):
	if(compra[i]>80):
		soma=soma+compra-desconto
	i=i+1
print(round(compra,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    compra=float(input())
ValueError: could not convert string to float: '[11.32,40.2,32,0]'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:12:58) 
-- CODE:
from math import*
compra=float(input("digite o numero:"))
desconto=5
i=0
soma=0
while(i<size(compra)):
	if(compra[i]>80):
		soma=soma+compra-desconto
	i=i+1
print(round(compra,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    compra=float(input())
ValueError: could not convert string to float: '[11.32,40.2,32,0]'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:13:51) 
-- CODE:
from math import*
compra=float(input("digite o numero:"))
desconto=5
i=0
soma=0
while(i<size(compra)):
	if(compra[i]>80):
		soma=soma+(compra-desconto)
	i=i+1
print(round(compra,2))

-- EXECUTION TIME:
0.155206
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1597/main.py", line 2, in <module>
    compra=float(input())
ValueError: could not convert string to float: '[11.32,40.2,32,0]'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:13:53) 
-- CODE:
from math import*
compra=float(input("digite o numero:"))
desconto=5
i=0
soma=0
while(i<size(compra)):
	if(compra[i]>80):
		soma=soma+(compra-desconto)
	i=i+1
print(round(compra,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    compra=float(input())
ValueError: could not convert string to float: '[11.32,40.2,32,0]'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:14:29) 
-- CODE:
from math import*
compra=float(input("digite o numero:"))
desconto=5
i=0
soma=0
while(i<size(compra)):
	if(compra[i]>80):
		soma=soma+(compra-desconto)
	i=i+1
print(round(soma,2))

-- EXECUTION TIME:
0.16368
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1597/main.py", line 2, in <module>
    compra=float(input())
ValueError: could not convert string to float: '[11.32,40.2,32,0]'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:14:33) 
-- CODE:
from math import*
compra=float(input("digite o numero:"))
desconto=5
i=0
soma=0
while(i<size(compra)):
	if(compra[i]>80):
		soma=soma+(compra-desconto)
	i=i+1
print(round(soma,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    compra=float(input())
ValueError: could not convert string to float: '[11.32,40.2,32,0]'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:15:22) 
-- CODE:
from math import*
compra=array(eval(input("digite o numero:")))
desconto=5
i=0
soma=0
while(i<size(compra)):
	if(compra[i]>80):
		soma=soma+(compra-desconto)
	i=i+1
print(round(soma,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    compra=array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:17:18) 
-- CODE:
from math import*
compra=input("digite o numero:")
desconto=5
i=0
soma=0
while(i<size(compra)):
	if(compra[i]>80):
		soma=soma+(compra-desconto)
	i=i+1
print(round(soma,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    while(i<size(compra)):
NameError: name 'size' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:17:43) 
-- CODE:
from math import*
compra=input("digite o numero:")
desconto=5
i=0
soma=0
while(i<len(compra)):
	if(compra[i]>80):
		soma=soma+(compra-desconto)
	i=i+1
print(round(soma,2))

-- EXECUTION TIME:
0.156881
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1597/main.py", line 7, in <module>
    if(compra[i]>80):
TypeError: unorderable types: str() > int()

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:17:46) 
-- CODE:
from math import*
compra=input("digite o numero:")
desconto=5
i=0
soma=0
while(i<len(compra)):
	if(compra[i]>80):
		soma=soma+(compra-desconto)
	i=i+1
print(round(soma,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if(compra[i]>80):
TypeError: '>' not supported between instances of 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:18:44) 
-- CODE:
from math import*
compra=input("digite o numero:")
desconto=5
i=0
soma=0
while(i<len(compra)):
	if(compra[i]>str (80)):
		soma=soma+(compra-desconto)
	i=i+1
print(round(soma,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    soma=soma+(compra-desconto)
TypeError: unsupported operand type(s) for -: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:19:15) 
-- CODE:
from math import*
compra=input("digite o numero:")
desconto=5
i=0
soma=0
while(i<len(compra)):
	if(compra[i]>str (80)):
	i=i+1
print(round(soma,2))

-- ERROR:
File "XXXX", line 8
    i=i+1
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:19:23) 
-- CODE:
from math import*
compra=input("digite o numero:")
desconto=5
i=0
soma=0
while(i<len(compra)):
	if(compra[i]>str (80)):
i=i+1
print(round(soma,2))

-- ERROR:
File "XXXX", line 8
    i=i+1
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:19:39) 
-- CODE:
from math import*
compra=input("digite o numero:")
desconto=5
i=0
soma=0
while(i<len(compra)):
	if(compra[i]>str (80)):
print(round(soma,2))

-- ERROR:
File "XXXX", line 8
    print(round(soma,2))
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:19:59) 
-- CODE:
from math import*
compra=input("digite o numero:")
desconto=5
i=0
soma=0
while(i<len(compra)):
	if(compra[i]>str (80)):
print(round(compra,2))

-- ERROR:
File "XXXX", line 8
    print(round(compra,2))
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:20:47) 
-- CODE:
from math import*
compra=input("digite o numero:")
desconto=5
i=0
soma=compra-desconto
while(i<len(compra)):
	if(compra[i]>str (80)):
	i=i+1
print(round(compra,2))

-- ERROR:
File "XXXX", line 8
    i=i+1
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:23:45) 
-- CODE:
from math import*
compra=input("digite o numero:")
desconto=5
i=0
soma=compra-desconto
while(i<size(soma)):
	if(soma[i]>= (80)):
	i=i+1
print(round(soma,2))

-- ERROR:
File "XXXX", line 8
    i=i+1
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:31:34) 
-- CODE:
from math import*
compra=array(eval(input("digite o numero:")))
desconto=5
i=0
soma=compra-desconto
while(i<size(compra)):
	if(soma[i]>= (80)):
	i=i+1
print(round(soma,2))

-- ERROR:
File "XXXX", line 8
    i=i+1
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:31:54) 
-- CODE:
from math import*
compra=array(eval(input("digite o numero:")))
desconto=5
i=0
soma=compra-desconto
while(i<size(compra)):
	if(compra[i]>= (80)):
	i=i+1
print(round(soma,2))

-- ERROR:
File "XXXX", line 8
    i=i+1
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:32:17) 
-- CODE:
from math import*
compra=array(eval(input("digite o numero:")))
desconto=5
i=0
soma=compra-desconto
while(i<size(compra)):
	if(compra[i]>= (80)):
		
i=i+1
print(round(soma,2))

-- ERROR:
File "XXXX", line 9
    i=i+1
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:39:16) 
-- CODE:
from math import*
compra=array(eval(input("digite o numero:")))
desconto=5
i=0
soma=compra-desconto
while(i<size(compra)):
	if(compra[i]>= (80)):
		soma=soma+1
		i=i+1
	print(round(soma,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    compra=array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:41:05) 
-- CODE:
from math import*
compra=array(eval(input("digite o numero:")))
desconto=5
i=0
v=0
while(i<size(compra)):
	if(compra[i]>= (80)):
		soma=compra-desconto
		i=i+1
	print(round(soma,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    compra=array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:43:09) 
-- CODE:
from numpy import*
compra=array(eval(input("digite o numero:")))
desconto=5
i=0
v=0
while(i<size(compra)):
	if(compra[i]>= (80)):
		soma=compra-desconto
		i=i+1
	print(round(soma,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:44:50) 
-- CODE:
from numpy import*
compra=array(eval(input("digite o numero:")))
desconto=5
i=0
v=0
while(i<size(compra)):
	if(compra[i]>=80):
		soma=compra-desconto
		i=i+1
	print(round(soma,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:45:12) 
-- CODE:
from numpy import*
compra=array(eval(input("digite o numero:")))
desconto=5
i=0
v=0
while(i<size(compra)):
	if(compra[i]>=80):
		soma=compra-desconto
		i=i+1
print(round(soma,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:45:47) 
-- CODE:
from numpy import*
compra=array(eval(input("digite o numero:")))
desconto=5
i=0
v=0
while(i<size(compra)):
	if(compra[i]>=80):
		soma=compra-desconto
		i=i+1
print(round(soma,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:47:32) 
-- CODE:
from numpy import*
compra=array(eval(input("digite o numero:")))
desconto=5
i=0
while(i<size(compra)):
	if(compra[i]>=80):
		soma=compra-desconto
		i=i+1
print(round(soma,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:51:23) 
-- CODE:
from numpy import*
compra=array(eval(input("digite o numero:")))
desconto=5
i=0
while(i<size(compra)):
	if(compra[i]>=80):
		soma=compra-desconto
	i=i+1
print(round(soma,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:53:31) 
-- CODE:
from numpy import*
compra=array(eval(input("digite o numero:")))
desconto=5
i=0
while(i<size(compra)):
	if(compra[i]>=80):
		soma=compra-desconto
	i=i+1
print(round(soma[i],2))

-- EXECUTION TIME:
0.341704
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1597/main.py", line 9, in <module>
    print(round(soma[i],2))
NameError: name 'soma' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:53:34) 
-- CODE:
from numpy import*
compra=array(eval(input("digite o numero:")))
desconto=5
i=0
while(i<size(compra)):
	if(compra[i]>=80):
		soma=compra-desconto
	i=i+1
print(round(soma[i],2))

-- EXECUTION TIME:
0.467603
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1597/main.py", line 9, in <module>
    print(round(soma[i],2))
NameError: name 'soma' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:53:35) 
-- CODE:
from numpy import*
compra=array(eval(input("digite o numero:")))
desconto=5
i=0
while(i<size(compra)):
	if(compra[i]>=80):
		soma=compra-desconto
	i=i+1
print(round(soma[i],2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:54:47) 
-- CODE:
from numpy import*
compra=array(eval(input("digite o numero:")))
desconto=5
i=0
while(i<size(compra)):
	if(compra[i]>=80):
		soma=compra-desconto
	i=i+1
	print(round(soma,2))

-- EXECUTION TIME:
0.359911
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1597/main.py", line 9, in <module>
    print(round(soma,2))
NameError: name 'soma' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:54:48) 
-- CODE:
from numpy import*
compra=array(eval(input("digite o numero:")))
desconto=5
i=0
while(i<size(compra)):
	if(compra[i]>=80):
		soma=compra-desconto
	i=i+1
	print(round(soma,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:54:49) 
-- CODE:
from numpy import*
compra=array(eval(input("digite o numero:")))
desconto=5
i=0
while(i<size(compra)):
	if(compra[i]>=80):
		soma=compra-desconto
	i=i+1
	print(round(soma,2))

-- EXECUTION TIME:
0.445876
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1597/main.py", line 9, in <module>
    print(round(soma,2))
NameError: name 'soma' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:54:50) 
-- CODE:
from numpy import*
compra=array(eval(input("digite o numero:")))
desconto=5
i=0
while(i<size(compra)):
	if(compra[i]>=80):
		soma=compra-desconto
	i=i+1
	print(round(soma,2))

-- EXECUTION TIME:
0.778045
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1597/main.py", line 9, in <module>
    print(round(soma,2))
NameError: name 'soma' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:55:59) 
-- CODE:
from numpy import*
compra=array(eval(input("digite o numero:")))
desconto=5
i=0
while(i<size(compra)):
	if(compra[i]>=80):
		soma=compra-desconto
	i=i+1
	print(round(i,2))

-- EXECUTION TIME:
0.388068
-- TEST CASE 1:
---- input:
[11.32,40.2,32,0]
---- correct output:
83.52
---- user output:
1
2
3
4
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
151.3
---- user output:
1
2
3
4
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
26
---- user output:
1
2
3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:56:08) 
-- CODE:
from numpy import*
compra=array(eval(input("digite o numero:")))
desconto=5
i=0
while(i<size(compra)):
	if(compra[i]>=80):
		soma=compra-desconto
	i=i+1
	print(round(compra,2))

-- EXECUTION TIME:
0.477284
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1597/main.py", line 9, in <module>
    print(round(compra,2))
TypeError: type numpy.ndarray doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:56:09) 
-- CODE:
from numpy import*
compra=array(eval(input("digite o numero:")))
desconto=5
i=0
while(i<size(compra)):
	if(compra[i]>=80):
		soma=compra-desconto
	i=i+1
	print(round(compra,2))

-- EXECUTION TIME:
0.519161
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1597/main.py", line 9, in <module>
    print(round(compra,2))
TypeError: type numpy.ndarray doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:56:10) 
-- CODE:
from numpy import*
compra=array(eval(input("digite o numero:")))
desconto=5
i=0
while(i<size(compra)):
	if(compra[i]>=80):
		soma=compra-desconto
	i=i+1
	print(round(compra,2))

-- EXECUTION TIME:
0.657022
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1597/main.py", line 9, in <module>
    print(round(compra,2))
TypeError: type numpy.ndarray doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:56:17) 
-- CODE:
from numpy import*
compra=array(eval(input("digite o numero:")))
desconto=5
i=0
while(i<size(compra)):
	if(compra[i]>=80):
		soma=compra-desconto
	i=i+1
print(round(compra,2))

-- EXECUTION TIME:
0.603498
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1597/main.py", line 9, in <module>
    print(round(compra,2))
TypeError: type numpy.ndarray doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:56:36) 
-- CODE:
from numpy import*
compra=array(eval(input("digite o numero:")))
desconto=5
i=0
while(i<size(compra)):
	if(compra[i]>=80):
		soma=compra-desconto
	i=i+1
print(round(i,2))

-- EXECUTION TIME:
0.363445
-- TEST CASE 1:
---- input:
[11.32,40.2,32,0]
---- correct output:
83.52
---- user output:
4
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
151.3
---- user output:
4
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
26
---- user output:
3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:56:39) 
-- CODE:
from numpy import*
compra=array(eval(input("digite o numero:")))
desconto=5
i=0
while(i<size(compra)):
	if(compra[i]>=80):
		soma=compra-desconto
	i=i+1
print(round(i,2))

-- EXECUTION TIME:
0.443322
-- TEST CASE 1:
---- input:
[11.32,40.2,32,0]
---- correct output:
83.52
---- user output:
4
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
151.3
---- user output:
4
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
26
---- user output:
3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:56:40) 
-- CODE:
from numpy import*
compra=array(eval(input("digite o numero:")))
desconto=5
i=0
while(i<size(compra)):
	if(compra[i]>=80):
		soma=compra-desconto
	i=i+1
print(round(i,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:57:34) 
-- CODE:
from numpy import*
compra=array(eval(input("digite o numero:")))
desconto=5
i=0
while(i<size(compra)):
	if(compra[i]>=80):
		soma=compra-desconto
	i=i+1
print(round(soma,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:01:56) 
-- CODE:
from numpy import*
compra=array(eval(input("digite o numero:")))
desconto=5
i=0
while(i<size(compra)):
	if(compra[i]>=80):
		soma=compra[i]-desconto
	i=i+1
print(round(soma,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:05:26) 
-- CODE:
from numpy import*
compra=array(eval(input("digite o numero:")))
desconto=5
i=0
while(i<size(compra)):
	if(compra[i]>80):
		soma=compra[i]-desconto
	i=i+1
print(round(soma,2))

-- EXECUTION TIME:
0.507359
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1597/main.py", line 9, in <module>
    print(round(soma,2))
NameError: name 'soma' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:05:28) 
-- CODE:
from numpy import*
compra=array(eval(input("digite o numero:")))
desconto=5
i=0
while(i<size(compra)):
	if(compra[i]>80):
		soma=compra[i]-desconto
	i=i+1
print(round(soma,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:22:26) 
-- CODE:
from numpy import*
compra=array(eval(input("digite o numero:")))
desconto=5
i=0
soma=0
while(i<size(compra)):
	if(compra[i]>80):
		soma=soma+(compra[i]-desconto)
		soma=soma+compra
	i=i+1
print(round(soma,2))

-- EXECUTION TIME:
0.402063
-- TEST CASE 1:
---- input:
[11.32,40.2,32,0]
---- correct output:
83.52
---- user output:
0
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
151.3
---- user output:
0
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
26
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:22:29) 
-- CODE:
from numpy import*
compra=array(eval(input("digite o numero:")))
desconto=5
i=0
soma=0
while(i<size(compra)):
	if(compra[i]>80):
		soma=soma+(compra[i]-desconto)
		soma=soma+compra
	i=i+1
print(round(soma,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:23:06) 
-- CODE:
from numpy import*
compra=array(eval(input("digite o numero:")))
desconto=5
i=0
soma=0
while(i<size(compra)):
	if(compra[i]>80):
		soma=soma+(compra[i]-desconto)
		soma=soma+compra
	i=i+1
print(round(soma,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:24:24) 
-- CODE:
from numpy import*
compra=array(eval(input("digite o numero:")))
desconto=5
i=0
soma=0
while(i<size(compra)):
	if(compra[i]>80):
		soma=soma+(compra[i]-desconto)
	soma=soma+compra[i]
	i=i+1
print(round(soma,2))

-- EXECUTION TIME:
0.529277
-- TEST CASE 1:
---- input:
[11.32,40.2,32,0]
---- correct output:
83.52
---- user output:
83.52
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
151.3
---- user output:
151.3
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
26
---- user output:
26
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
